--- a/main.html
+++ b/main.html
@@ -8,7 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<h1>Bengaluru</h1>
+	<br>
+	<p>Bengaluru (also called Bangalore) is the capital of India's southern Karnataka state. The center of India's high-tech industry, the city is also known for its parks and nightlife</p>
+    <ol type="i">
+		<li><b><i>Cubbon Park</i></b></li>
+		<li><b><i>lal bagh</i></b></li>
+		<li><b><i>vidhana soudha</i></b></li>
+		<li><b><i>chinna swamy stadium</i></b></li>
+		<li><b><i>banglore palace</i></b></li>
+	</ol>
+	<ul>
+		<li><b><i>mixture</i></b></li>
+		<li><b><i>fruites</i></b></li>
+		<li><b><i>biriyani</i></b></li>
+		<li><b><i>burger</i></b></li>
+		<li><b><i>holige</i></b></li>
+		
+	</ul>
+	
+	
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
